--- a/.github/workflows/gpt-translate.yml
+++ b/.github/workflows/gpt-translate.yml
@@ -2,8 +2,7 @@
 name: GPT Translate
 
 on:
-  issue_comment:
-    types: [ created ]
+  workflow_dispatch:
 
 jobs:
   gpt_translate:
@@ -13,9 +12,11 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Run GPT Translate
-        if: |
-          contains(github.event.comment.body, '/gt')
         uses: 3ru/gpt-translate@master
         with:
-          apikey: ${{ secrets.OPENAI_API_KEY }}
-          model: "gpt-4o"
+          apikey: "sk-p9reRkbTcnLVm4ITgWy0VNzGIDhFTdPxdEg7OM5H0LNSZVRP"
+          basePath: "https://free.gpt.ge"
+          model: "gpt-4o-mini"
+          inputFiles: "./EN/*.md"
+          outputFiles: "./CN/*.md"
+          languages: "chinese"
