--- a/.github/workflows/gpt-translate.yml
+++ b/.github/workflows/gpt-translate.yml
@@ -16,7 +16,7 @@ jobs:
         with:
           apikey: "sk-p9reRkbTcnLVm4ITgWy0VNzGIDhFTdPxdEg7OM5H0LNSZVRP"
           basePath: "https://free.gpt.ge"
-          model: "gpt-4o-mini"
+          model: "gpt-4o"
           inputFiles: "${{ github.workspace }}/.github/workflows/test.md"
           outputFiles: "${{ github.workspace }}/test.md"
           languages: "chinese"
